--- a/en_US.strings
+++ b/en_US.strings
@@ -4,7 +4,7 @@
 // There is one .strings file per locale.
 //
 // Define your translated strings one line at a time like so:
-"myvalue" = "hi!";
+"battalion" = "hi!";
 // "My Other Key" = "My Other Translation";
 //
 // Keys can be any string; choose whatever scheme helps you stay organized.
